# mp2-lab3-arithmetic

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  arithmetic.sln  cmake_install.cmake
gtest/: CMakeLists.txt  cmake_install.cmake  gtest.vcxproj  gtest.vcxproj.filters
include/: arithmetic.h  lexemus.h  stack.h
samples/: CMakeLists.txt  cmake_install.cmake  main.vcxproj  main.vcxproj.filters  main_arithmetic.cpp
src/: CMakeLists.txt  arithmetic.cpp  arithmetic.vcxproj  arithmetic.vcxproj.filters  cmake_install.cmake
test/: CMakeLists.txt  cmake_install.cmake  test.vcxproj  test.vcxproj.filters  test_arithmetic.cpp  test_stack.cpp
